HW4/javali_tests/others/new/HW3_MarLin/type_error/array/ErrArrayLengthType.javali
class A {

}

class Main {

   void main() {
      A[] a;
      a = new A[true];
   }
}
